--- a/ColonialLegacy.ipynb
+++ b/ColonialLegacy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "source": [
     "col = pd.read_csv('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/COLDAT_colonies.csv')\n",
     "efw = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/efotw-2022-master-index-data-for-researchers-iso.xlsx')\n",
@@ -303,6 +303,15 @@
    "execution_count": 222,
    "source": [
     "df = pd.merge(col, means, left_on='country_code', right_on='ISO_Code_3', how='left')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "df = pd.read_excel()"
    ],
    "outputs": [],
    "metadata": {}
