--- a/ColonialLegacy.ipynb
+++ b/ColonialLegacy.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "col = pd.read_csv('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/COLDAT_colonies.csv')\n",
     "efw = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/efotw-2022-master-index-data-for-researchers-iso.xlsx')\n",
-    "vdem = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/VDemStateOwn.xls').rename(columns={'v2clstown':'stateown'})"
+    "vdem = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/VDem.xls')\n",
+    "vdem.rename(columns={'v2x_libdem':'libdem','v2xcl_prpty':'prop_rights','v2clstown':'stateown'}, inplace=True)"
    ],
    "outputs": [],
    "metadata": {}
@@ -248,34 +249,6 @@
      },
      "metadata": {},
      "execution_count": 220
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
-   "source": [
-    "vdem.stateown.describe()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "count    27350.000000\n",
-       "mean         0.130512\n",
-       "std          1.392390\n",
-       "min         -4.182000\n",
-       "25%         -0.822000\n",
-       "50%          0.364000\n",
-       "75%          1.204000\n",
-       "max          3.237000\n",
-       "Name: stateown, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 224
     }
    ],
    "metadata": {}
