--- a/ColonialLegacy.ipynb
+++ b/ColonialLegacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "col = pd.read_csv('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/COLDAT_colonies.csv')\n",
     "efw = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/efotw-2022-master-index-data-for-researchers-iso.xlsx')\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "source": [
     "#Exclude 2020 because of the pandemic\n",
     "efw = efw.loc[(efw['Year']<2020) & (efw['Year'] >1999)].rename(columns={'World Bank Region': \"wb_region\"})\n",
@@ -248,24 +248,27 @@
       ]
      },
      "metadata": {},
-     "execution_count": 220
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "source": [
-    "means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()"
+    "means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
+    "stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-221-80b283be3827>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-      "  means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n"
+      "<ipython-input-7-38ad0eed5abe>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
+      "<ipython-input-7-38ad0eed5abe>:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()\n"
      ]
     }
    ],
@@ -275,7 +278,8 @@
    "cell_type": "code",
    "execution_count": 222,
    "source": [
-    "df = pd.merge(col, means, left_on='country_code', right_on='ISO_Code_3', how='left')"
+    "df = pd.merge(col, means, left_on='country_code', right_on='ISO_Code_3', how='left')\n",
+    "df = pd.merge(col, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))"
    ],
    "outputs": [],
    "metadata": {}
@@ -291,9 +295,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "source": [
     "df.to_excel('colonies.xlsx')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "df = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/colonies.xlsx')\n",
+    "df = pd.merge(df, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))"
    ],
    "outputs": [],
    "metadata": {}
