--- a/ColonialLegacy.ipynb
+++ b/ColonialLegacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "source": [
     "col = pd.read_csv('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/COLDAT_colonies.csv')\n",
     "efw = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/efotw-2022-master-index-data-for-researchers-iso.xlsx')\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "source": [
     "#Exclude 2020 because of the pandemic\n",
     "efw = efw.loc[(efw['Year']<2020) & (efw['Year'] >1999)].rename(columns={'World Bank Region': \"wb_region\"})\n",
@@ -119,10 +119,9 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>ISO_Code_2</th>\n",
-       "      <th>ISO_Code_3</th>\n",
        "      <th>wb_region</th>\n",
-       "      <th>World Bank Current Income Classification, 1990-present (L=Low income, LM=Lower middle income, UM=Upper middle income, H=High income)</th>\n",
        "      <th>Countries</th>\n",
+       "      <th>ISO_Code_3</th>\n",
        "      <th>efw</th>\n",
        "      <th>Area 1</th>\n",
        "      <th>Area 2</th>\n",
@@ -137,10 +136,9 @@
        "      <th>165</th>\n",
        "      <td>2019</td>\n",
        "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>UM</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
        "      <td>7.789804</td>\n",
        "      <td>7.914268</td>\n",
        "      <td>5.258761</td>\n",
@@ -153,10 +151,9 @@
        "      <th>2970</th>\n",
        "      <td>2002</td>\n",
        "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>LM</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
        "      <td>6.742276</td>\n",
        "      <td>8.223671</td>\n",
        "      <td>4.845155</td>\n",
@@ -169,10 +166,9 @@
        "      <th>1485</th>\n",
        "      <td>2011</td>\n",
        "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>LM</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
        "      <td>7.520319</td>\n",
        "      <td>8.071567</td>\n",
        "      <td>5.132500</td>\n",
@@ -185,10 +181,9 @@
        "      <th>1980</th>\n",
        "      <td>2008</td>\n",
        "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>LM</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
        "      <td>7.368699</td>\n",
        "      <td>8.225602</td>\n",
        "      <td>5.479977</td>\n",
@@ -201,10 +196,9 @@
        "      <th>330</th>\n",
        "      <td>2018</td>\n",
        "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>UM</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
        "      <td>7.759843</td>\n",
        "      <td>7.811582</td>\n",
        "      <td>5.221942</td>\n",
@@ -218,58 +212,286 @@
        "</div>"
       ],
       "text/plain": [
-       "      Year ISO_Code_2 ISO_Code_3              wb_region  \\\n",
-       "165   2019         AL        ALB  Europe & Central Asia   \n",
-       "2970  2002         AL        ALB  Europe & Central Asia   \n",
-       "1485  2011         AL        ALB  Europe & Central Asia   \n",
-       "1980  2008         AL        ALB  Europe & Central Asia   \n",
-       "330   2018         AL        ALB  Europe & Central Asia   \n",
+       "      Year ISO_Code_2              wb_region Countries ISO_Code_3       efw  \\\n",
+       "165   2019         AL  Europe & Central Asia   Albania        ALB  7.789804   \n",
+       "2970  2002         AL  Europe & Central Asia   Albania        ALB  6.742276   \n",
+       "1485  2011         AL  Europe & Central Asia   Albania        ALB  7.520319   \n",
+       "1980  2008         AL  Europe & Central Asia   Albania        ALB  7.368699   \n",
+       "330   2018         AL  Europe & Central Asia   Albania        ALB  7.759843   \n",
        "\n",
-       "     World Bank Current Income Classification, 1990-present (L=Low income, LM=Lower middle income, UM=Upper middle income, H=High income)  \\\n",
-       "165                                                  UM                                                                                     \n",
-       "2970                                                 LM                                                                                     \n",
-       "1485                                                 LM                                                                                     \n",
-       "1980                                                 LM                                                                                     \n",
-       "330                                                  UM                                                                                     \n",
-       "\n",
-       "     Countries       efw    Area 1    Area 2    Area 3    Area 4    Area 5  \\\n",
-       "165    Albania  7.789804  7.914268  5.258761  9.826940  8.230911  7.700060   \n",
-       "2970   Albania  6.742276  8.223671  4.845155  7.101343  6.097055  7.291095   \n",
-       "1485   Albania  7.520319  8.071567  5.132500  9.641108  6.996151  7.729106   \n",
-       "1980   Albania  7.368699  8.225602  5.479977  9.433083  6.533912  7.121853   \n",
-       "330    Albania  7.759843  7.811582  5.221942  9.760704  8.221900  7.767841   \n",
-       "\n",
-       "           std  \n",
-       "165   1.641201  \n",
-       "2970  1.287959  \n",
-       "1485  1.644798  \n",
-       "1980  1.526479  \n",
-       "330   1.632527  "
+       "        Area 1    Area 2    Area 3    Area 4    Area 5       std  \n",
+       "165   7.914268  5.258761  9.826940  8.230911  7.700060  1.641201  \n",
+       "2970  8.223671  4.845155  7.101343  6.097055  7.291095  1.287959  \n",
+       "1485  8.071567  5.132500  9.641108  6.996151  7.729106  1.644798  \n",
+       "1980  8.225602  5.479977  9.433083  6.533912  7.121853  1.526479  \n",
+       "330   7.811582  5.221942  9.760704  8.221900  7.767841  1.632527  "
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "source": [
     "means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
-    "stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()"
+    "stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()\n",
+    "last = efw.loc[efw['Year']==2019]\n",
+    "last"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-7-38ad0eed5abe>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "<ipython-input-26-a5ae555899df>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
-      "<ipython-input-7-38ad0eed5abe>:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "<ipython-input-26-a5ae555899df>:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>ISO_Code_2</th>\n",
+       "      <th>World Bank Region</th>\n",
+       "      <th>Countries</th>\n",
+       "      <th>ISO_Code_3</th>\n",
+       "      <th>efw</th>\n",
+       "      <th>Area 1</th>\n",
+       "      <th>Area 2</th>\n",
+       "      <th>Area 3</th>\n",
+       "      <th>Area 4</th>\n",
+       "      <th>Area 5</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Europe &amp; Central Asia</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>7.789804</td>\n",
+       "      <td>7.914268</td>\n",
+       "      <td>5.258761</td>\n",
+       "      <td>9.826940</td>\n",
+       "      <td>8.230911</td>\n",
+       "      <td>7.700060</td>\n",
+       "      <td>1.641201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>Middle East &amp; North Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZA</td>\n",
+       "      <td>4.860507</td>\n",
+       "      <td>4.493283</td>\n",
+       "      <td>4.142183</td>\n",
+       "      <td>7.287544</td>\n",
+       "      <td>2.552219</td>\n",
+       "      <td>5.840058</td>\n",
+       "      <td>1.790882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>5.550608</td>\n",
+       "      <td>8.052308</td>\n",
+       "      <td>3.667991</td>\n",
+       "      <td>4.667936</td>\n",
+       "      <td>5.406168</td>\n",
+       "      <td>5.975078</td>\n",
+       "      <td>1.641862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>Latin America &amp; the Caribbean</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>5.438832</td>\n",
+       "      <td>6.547787</td>\n",
+       "      <td>4.797545</td>\n",
+       "      <td>3.880439</td>\n",
+       "      <td>5.966232</td>\n",
+       "      <td>5.993349</td>\n",
+       "      <td>1.078801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>Europe &amp; Central Asia</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>ARM</td>\n",
+       "      <td>7.979822</td>\n",
+       "      <td>7.770128</td>\n",
+       "      <td>6.250483</td>\n",
+       "      <td>9.519780</td>\n",
+       "      <td>8.524505</td>\n",
+       "      <td>7.819692</td>\n",
+       "      <td>1.196697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>Latin America &amp; the Caribbean</td>\n",
+       "      <td>Venezuela, RB</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>2.871351</td>\n",
+       "      <td>4.338019</td>\n",
+       "      <td>2.441900</td>\n",
+       "      <td>0.944935</td>\n",
+       "      <td>4.090400</td>\n",
+       "      <td>2.517155</td>\n",
+       "      <td>1.383658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>VN</td>\n",
+       "      <td>East Asia &amp; Pacific</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>VNM</td>\n",
+       "      <td>6.400031</td>\n",
+       "      <td>6.955223</td>\n",
+       "      <td>4.983864</td>\n",
+       "      <td>6.892635</td>\n",
+       "      <td>6.183881</td>\n",
+       "      <td>6.983588</td>\n",
+       "      <td>0.857859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>YE</td>\n",
+       "      <td>Middle East &amp; North Africa</td>\n",
+       "      <td>Yemen, Rep.</td>\n",
+       "      <td>YEM</td>\n",
+       "      <td>5.719912</td>\n",
+       "      <td>8.267794</td>\n",
+       "      <td>2.744222</td>\n",
+       "      <td>8.726899</td>\n",
+       "      <td>5.377539</td>\n",
+       "      <td>3.502867</td>\n",
+       "      <td>2.712049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>ZM</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>ZMB</td>\n",
+       "      <td>6.949406</td>\n",
+       "      <td>6.578045</td>\n",
+       "      <td>5.014693</td>\n",
+       "      <td>9.028393</td>\n",
+       "      <td>7.691995</td>\n",
+       "      <td>6.454841</td>\n",
+       "      <td>1.499930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>ZW</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>4.719465</td>\n",
+       "      <td>5.628359</td>\n",
+       "      <td>4.026568</td>\n",
+       "      <td>1.413372</td>\n",
+       "      <td>6.397045</td>\n",
+       "      <td>6.132583</td>\n",
+       "      <td>2.064439</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year ISO_Code_2              World Bank Region      Countries ISO_Code_3  \\\n",
+       "165  2019         AL          Europe & Central Asia        Albania        ALB   \n",
+       "166  2019         DZ     Middle East & North Africa        Algeria        DZA   \n",
+       "167  2019         AO             Sub-Saharan Africa         Angola        AGO   \n",
+       "168  2019         AR  Latin America & the Caribbean      Argentina        ARG   \n",
+       "169  2019         AM          Europe & Central Asia        Armenia        ARM   \n",
+       "..    ...        ...                            ...            ...        ...   \n",
+       "325  2019         VE  Latin America & the Caribbean  Venezuela, RB        VEN   \n",
+       "326  2019         VN            East Asia & Pacific        Vietnam        VNM   \n",
+       "327  2019         YE     Middle East & North Africa    Yemen, Rep.        YEM   \n",
+       "328  2019         ZM             Sub-Saharan Africa         Zambia        ZMB   \n",
+       "329  2019         ZW             Sub-Saharan Africa       Zimbabwe        ZWE   \n",
+       "\n",
+       "          efw    Area 1    Area 2    Area 3    Area 4    Area 5       std  \n",
+       "165  7.789804  7.914268  5.258761  9.826940  8.230911  7.700060  1.641201  \n",
+       "166  4.860507  4.493283  4.142183  7.287544  2.552219  5.840058  1.790882  \n",
+       "167  5.550608  8.052308  3.667991  4.667936  5.406168  5.975078  1.641862  \n",
+       "168  5.438832  6.547787  4.797545  3.880439  5.966232  5.993349  1.078801  \n",
+       "169  7.979822  7.770128  6.250483  9.519780  8.524505  7.819692  1.196697  \n",
+       "..        ...       ...       ...       ...       ...       ...       ...  \n",
+       "325  2.871351  4.338019  2.441900  0.944935  4.090400  2.517155  1.383658  \n",
+       "326  6.400031  6.955223  4.983864  6.892635  6.183881  6.983588  0.857859  \n",
+       "327  5.719912  8.267794  2.744222  8.726899  5.377539  3.502867  2.712049  \n",
+       "328  6.949406  6.578045  5.014693  9.028393  7.691995  6.454841  1.499930  \n",
+       "329  4.719465  5.628359  4.026568  1.413372  6.397045  6.132583  2.064439  \n",
+       "\n",
+       "[165 rows x 12 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
     }
    ],
    "metadata": {}
@@ -304,10 +526,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "source": [
-    "df = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/colonies.xlsx')\n",
-    "df = pd.merge(df, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))"
+    "df = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/colonies_base.xlsx')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "# Initiate Columns with nan\n",
+    "df['efw_year'] = np.nan\n",
+    "df['efw_indep'] = np.nan\n",
+    "\n",
+    "for country in df['country_code']:\n",
+    "    if country in efw['ISO_Code_3'].unique():\n",
+    "        year = df.loc[df['country_code']==country, 'independence'].values[0] #Extracts independence year\n",
+    "        efw_year = efw.loc[(efw['ISO_Code_3']==country) & (efw['Year']>=year) \n",
+    "                                        & (efw['efw'].notnull()), 'Year'].values.min() #Earliest available year for EFW\n",
+    "        df.loc[df['country_code']==country, 'efw_year'] = efw_year\n",
+    "        df.loc[df['country_code']==country, 'efw_indep'] = efw.loc[(efw['ISO_Code_3'] == country) & (efw['Year'] == efw_year), 'efw'].values[0]\n",
+    "    else: \n",
+    "        pass"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "df = pd.merge(df, means, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_avg\"))\n",
+    "df = pd.merge(df, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))\n",
+    "df = pd.merge(df, last, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_2019\"))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "df.to_excel('colonies.xlsx')"
    ],
    "outputs": [],
    "metadata": {}
