--- a/Table2.tex
+++ b/Table2.tex
@@ -5,32 +5,32 @@
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
             &\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}\\
 \hline
-time\_total  &     0.00221\sym{**} &     0.00353\sym{***}&     0.00246         &     0.00332\sym{*}  &     0.00297\sym{*}  &     0.00293\sym{**} &     0.00400\sym{***}&     0.00319\sym{*}  &     0.00348\sym{***}\\
-            &  (0.000689)         &   (0.00101)         &   (0.00131)         &   (0.00155)         &   (0.00117)         &  (0.000967)         &   (0.00103)         &   (0.00121)         &  (0.000955)         \\
+time\_total  &     0.00221\sym{***}&     0.00353\sym{***}&     0.00246\sym{*}  &     0.00332\sym{**} &     0.00297\sym{**} &     0.00293\sym{***}&     0.00265\sym{**} &     0.00319\sym{**} &     0.00348\sym{***}\\
+            &  (0.000689)         &   (0.00101)         &   (0.00131)         &   (0.00155)         &   (0.00117)         &  (0.000967)         &   (0.00107)         &   (0.00121)         &  (0.000955)         \\
 [1em]
 1.colonizer &                     &           0         &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
             &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-2.colonizer &                     &       1.052\sym{*}  &       1.986\sym{*}  &       1.037\sym{*}  &       0.264         &       0.956\sym{*}  &       0.268         &       0.823         &       0.466         \\
-            &                     &     (0.478)         &     (0.783)         &     (0.498)         &     (0.538)         &     (0.443)         &     (0.568)         &     (0.641)         &     (0.510)         \\
+2.colonizer &                     &       1.052\sym{**} &       1.986\sym{**} &       1.037\sym{**} &       0.264         &       0.956\sym{**} &       0.181         &       0.823         &       0.466         \\
+            &                     &     (0.478)         &     (0.783)         &     (0.498)         &     (0.538)         &     (0.443)         &     (0.540)         &     (0.641)         &     (0.510)         \\
 [1em]
-3.colonizer &                     &       0.468         &       1.894\sym{*}  &       0.380         &     -0.0662         &       0.409         &      -0.270         &       0.255         &     -0.0125         \\
-            &                     &     (0.488)         &     (0.813)         &     (0.509)         &     (0.538)         &     (0.452)         &     (0.571)         &     (0.677)         &     (0.515)         \\
+3.colonizer &                     &       0.468         &       1.894\sym{**} &       0.380         &     -0.0662         &       0.409         &      -0.295         &       0.255         &     -0.0125         \\
+            &                     &     (0.488)         &     (0.813)         &     (0.509)         &     (0.538)         &     (0.452)         &     (0.542)         &     (0.677)         &     (0.515)         \\
 [1em]
-4.colonizer &                     &       1.518         &                     &       1.511         &       1.200         &       1.499         &       0.867         &       2.110         &       1.215         \\
-            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.946)         &     (1.082)         &     (0.851)         \\
+4.colonizer &                     &       1.518         &                     &       1.511         &       1.200         &       1.499\sym{*}  &       0.890         &       2.110\sym{*}  &       1.215         \\
+            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.897)         &     (1.082)         &     (0.851)         \\
 [1em]
-5.colonizer &                     &      -0.375         &                     &      -0.382         &      -0.693         &      -0.395         &      -1.091         &      -0.551         &       2.391         \\
-            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.951)         &     (1.042)         &     (1.346)         \\
+5.colonizer &                     &      -0.375         &                     &      -0.382         &      -0.693         &      -0.395         &      -1.068         &      -0.551         &       2.391\sym{*}  \\
+            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.902)         &     (1.042)         &     (1.346)         \\
 [1em]
-6.colonizer &                     &       0.161         &       0.903         &       0.451         &      -0.424         &       0.312         &      -0.379         &     -0.0751         &      -0.306         \\
-            &                     &     (0.662)         &     (0.953)         &     (0.834)         &     (0.680)         &     (0.615)         &     (0.708)         &     (0.886)         &     (0.688)         \\
+6.colonizer &                     &       0.161         &       0.903         &       0.451         &      -0.424         &       0.312         &      -0.151         &     -0.0751         &      -0.306         \\
+            &                     &     (0.662)         &     (0.953)         &     (0.834)         &     (0.680)         &     (0.615)         &     (0.675)         &     (0.886)         &     (0.688)         \\
 [1em]
-7.colonizer &                     &      -0.174         &       1.210         &      -0.126         &      -0.554         &     -0.0272         &      -0.784         &      -0.146         &      -0.503         \\
-            &                     &     (0.596)         &     (0.927)         &     (0.692)         &     (0.641)         &     (0.554)         &     (0.660)         &     (0.815)         &     (0.605)         \\
+7.colonizer &                     &      -0.174         &       1.210         &      -0.126         &      -0.554         &     -0.0272         &      -0.493         &      -0.146         &      -0.503         \\
+            &                     &     (0.596)         &     (0.927)         &     (0.692)         &     (0.641)         &     (0.554)         &     (0.633)         &     (0.815)         &     (0.605)         \\
 [1em]
-8.colonizer &                     &       0.544         &       1.404         &       0.490         &      -0.202         &       0.672         &      -0.124         &       0.481         &       0.312         \\
-            &                     &     (0.538)         &     (0.841)         &     (0.696)         &     (0.588)         &     (0.499)         &     (0.610)         &     (0.755)         &     (0.555)         \\
+8.colonizer &                     &       0.544         &       1.404         &       0.490         &      -0.202         &       0.672         &       0.157         &       0.481         &       0.312         \\
+            &                     &     (0.538)         &     (0.841)         &     (0.696)         &     (0.588)         &     (0.499)         &     (0.586)         &     (0.755)         &     (0.555)         \\
 [1em]
 america     &                     &                     &                     &                     &      -0.746         &                     &                     &                     &                     \\
             &                     &                     &                     &                     &     (0.472)         &                     &                     &                     &                     \\
@@ -38,13 +38,16 @@ america     &                     &                     &                     & 
 africa      &                     &                     &                     &                     &      -1.379\sym{***}&                     &                     &                     &                     \\
             &                     &                     &                     &                     &     (0.396)         &                     &                     &                     &                     \\
 [1em]
-asia        &                     &                     &                     &                     &      -0.935\sym{*}  &                     &                     &                     &                     \\
+asia        &                     &                     &                     &                     &      -0.935\sym{**} &                     &                     &                     &                     \\
             &                     &                     &                     &                     &     (0.429)         &                     &                     &                     &                     \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &       1.981\sym{**} &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.720)         &                     &                     \\
+lat\_abst    &                     &                     &                     &                     &                     &                     &       1.937\sym{***}&                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.683)         &                     &                     \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &       0.126         &                     &                     \\
+landlock    &                     &                     &                     &                     &                     &                     &       0.231         &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.219)         &                     &                     \\
+[1em]
+island      &                     &                     &                     &                     &                     &                     &       0.714\sym{***}&                     &                     \\
             &                     &                     &                     &                     &                     &                     &     (0.228)         &                     &                     \\
 [1em]
 humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00207         &                     \\
@@ -62,7 +65,7 @@ humid4      &                     &                     &                     & 
 temp1       &                     &                     &                     &                     &                     &                     &                     &      0.0616         &                     \\
             &                     &                     &                     &                     &                     &                     &                     &     (0.117)         &                     \\
 [1em]
-temp2       &                     &                     &                     &                     &                     &                     &                     &     -0.0732         &                     \\
+temp2       &                     &                     &                     &                     &                     &                     &                     &     -0.0732\sym{*}  &                     \\
             &                     &                     &                     &                     &                     &                     &                     &    (0.0419)         &                     \\
 [1em]
 temp3       &                     &                     &                     &                     &                     &                     &                     &     0.00626         &                     \\
@@ -107,16 +110,16 @@ silv        &                     &                     &                     & 
 zinc        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0562         \\
             &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0958)         \\
 [1em]
-oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000682\sym{**} \\
+oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000682\sym{***}\\
             &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000232)         \\
 [1em]
-\_cons      &       5.773\sym{***}&       4.912\sym{***}&       4.390\sym{***}&       4.926\sym{***}&       6.629\sym{***}&       4.953\sym{***}&       5.061\sym{***}&       4.853\sym{**} &       5.216\sym{***}\\
-            &     (0.139)         &     (0.466)         &     (0.772)         &     (0.490)         &     (0.650)         &     (0.431)         &     (0.553)         &     (1.740)         &     (0.495)         \\
+\_cons      &       5.773\sym{***}&       4.912\sym{***}&       4.390\sym{***}&       4.926\sym{***}&       6.629\sym{***}&       4.953\sym{***}&       5.099\sym{***}&       4.853\sym{***}&       5.216\sym{***}\\
+            &     (0.139)         &     (0.466)         &     (0.772)         &     (0.490)         &     (0.650)         &     (0.431)         &     (0.525)         &     (1.740)         &     (0.495)         \\
 \hline
 \(N\)       &         107         &         107         &          61         &          79         &          90         &         103         &          90         &          89         &          89         \\
-\(R^{2}\)   &       0.090         &       0.264         &       0.182         &       0.229         &       0.424         &       0.277         &       0.368         &       0.470         &       0.492         \\
+\(R^{2}\)   &       0.090         &       0.264         &       0.182         &       0.229         &       0.424         &       0.277         &       0.439         &       0.470         &       0.492         \\
 \hline\hline
 \multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.05\), \sym{**} \(p<0.01\), \sym{***} \(p<0.001\)}\\
+\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
